# eshu-installer

./: .gitignore  ADVANCED_FEATURES.md  AI_INTEGRATION_GUIDE.md  ANALYTICS_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  DEMO.md  DEMO_SCRIPTS_README.md  DEPLOYMENT_INSTRUCTIONS.md  ESHUS_PATH_FEATURE.md  ESHU_QUICK_REFERENCE.md  FIXES_SUMMARY.md  FREEMIUM_SETUP_GUIDE.md  GITHUB_DEPLOYMENT_GUIDE.md  GUMROAD_CONTENT_PAGE.md  GUMROAD_SETUP_GUIDE.md  IMPROVEMENTS.md  INSTALL.md  INSTALLATION.md  LICENSE  NEXT_STEPS.md  PHASE_1_2_COMPLETE.md  PKGBUILD  PKGBUILD.option-a  PKGBUILD.option-b  PRIVACY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_v0.4.6.md  SETUP_PAYMENT_NOW.md  SHIP_v0.4.0.md  START_HERE.md  SUMMARY_v0.4.0.md  cleanup-repo.sh  demo-script.sh  eshu-installer.install  fix_and_install.sh  install-eshu.sh  install.sh  (+9 more)
.github/workflows/: ci.yml  package.yml
docs/: CONTRIBUTING.md  QUICK_REFERENCE.md  landing_page.html
marketing/: .launch_campaign.sh.kate-swp  AGGRESSIVE_STRATEGY.md  QUICK_START.md  launch_campaign.sh  media_outreach.py  reddit_campaign.py  repo_submissions.sh
marketing/bots/: social_listener.py
src/eshu/: __init__.py  analytics.py  bloat_analyzer.py  bundle_database.py  cache.py  cli.py  cli_enhanced.py  community_checker.py  config.py  conflict_oracle.py  eshu_paths.py  eshufile.py  ghost_mode.py  github_search.py  installer.py  license_manager.py  llm_engine.py  maintenance.py  package_search.py  package_translator.py  snapshot_manager.py  system_profiler.py
systemd/: eshu-profiler.service  eshu-profiler.timer
tests/: __init__.py  test_eshu_paths.py  test_imports.py  test_license.py
